--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,14 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation "org.springframework.boot:spring-boot-starter-validation"
     implementation 'org.mapstruct:mapstruct:1.5.2.Final'
+    implementation "org.springframework.boot:spring-boot-starter-security"
+    implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
+    runtimeOnly   'io.jsonwebtoken:jjwt-impl:0.13.0'
+    runtimeOnly   'io.jsonwebtoken:jjwt-jackson:0.13.0'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.15.2'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.2'
+    implementation "org.springframework.cloud:spring-cloud-starter-openfeign:4.3.0"
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.projectlombok:lombok'
