--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,7 +16,13 @@ spring:
     url: jdbc:postgresql://localhost:5432/plazoleta
     username: postgres
     password: postgres
-
+#  sql:
+#    init:
+#      mode: always
+#  jpa:
+#    defer-datasource-initialization: true
+#    hibernate:
+#      ddl-auto: create-drop
 
 usuario:
   url: "http://localhost:8080/usuario"
